<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Unreal Speccy Portable</string>
    <string name="open_file">Open File</string>
    <string name="save_state">Save State</string>
    <string name="load_state">Load State</string>
    <string name="select_joystick">Select Joystick</string>
    <string name="joystick_kempston">Kempston</string>
    <string name="joystick_cursor">Cursor</string>
    <string name="joystick_qaop">QAOP</string>
    <string name="joystick_sinclair2">Sinclair 2</string>
    <string name="reset">Reset</string>
    <string name="quit">Quit</string>
    <string name="preferences">Preferences</string>
    <string name="pref_control">Controls</string>
    <string name="pref_sound">Sound</string>
    <string name="sound_source">Sound Source</string>
    <string name="sound_source_ay">AY</string>
    <string name="sound_source_tape">Tape</string>
    <string name="sound_source_beeper">Beeper</string>
    <string name="sound_chip">Sound Chip Type</string>
    <string name="sound_chip_ay">AY</string>
    <string name="sound_chip_ym">YM</string>
    <string name="sound_chip_stereo">Chip Stereo Mode</string><string name="sound_chip_stereo_abc">ABC</string>
    <string name="sound_chip_stereo_acb">ACB</string>
    <string name="sound_chip_stereo_bac">BAC</string>
    <string name="sound_chip_stereo_bca">BCA</string>
    <string name="sound_chip_stereo_cab">CAB</string>
    <string name="sound_chip_stereo_cba">CBA</string>
    <string name="sound_chip_stereo_mono">mono</string>
    <string name="pref_peripherals">Peripherals</string>
    
    <string name="drive">Beta Disk Drive</string><string name="drive_a">A</string><string name="drive_b">B</string><string name="drive_c">C</string><string name="drive_d">D</string>
    <string name="mode_48k">Mode 48K</string>
    <string name="file_selector">Select File</string><string name="tape">Tape</string>
    <string name="tape_na">Not Available (open tape file first)</string><string name="tape_started">Started (press to stop)</string><string name="tape_stopped">Stopped (press to start)</string><string name="tape_fast">Fast tape</string><string name="tape_fast_desc">Use tape traps</string>
    
</resources>
