<?xml version="1.0" encoding="UTF-8"?>
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/preferences">
        <PreferenceCategory android:title="@string/pref_control">
            <ListPreference android:entryValues="@array/joystick_values" android:entries="@array/joystick_names" android:title="@string/select_joystick" android:key="joystick"></ListPreference>
            
        </PreferenceCategory><PreferenceCategory android:title="@string/pref_sound">
            <ListPreference android:entryValues="@array/sound_source_values" android:entries="@array/sound_source_names" android:title="@string/sound_source" android:key="sound"></ListPreference><ListPreference android:title="@string/sound_chip" android:entryValues="@array/sound_chip_values" android:entries="@array/sound_chip_names" android:key="sound chip"></ListPreference>
            <ListPreference android:key="ay stereo" android:entryValues="@array/sound_chip_stereo_values" android:entries="@array/sound_chip_stereo_names" android:title="@string/sound_chip_stereo"></ListPreference>
        </PreferenceCategory><PreferenceCategory android:title="@string/pref_peripherals">
            <ListPreference android:title="@string/drive" android:key="drive" android:entryValues="@array/drive_values" android:entries="@array/drive_names"></ListPreference>
            <CheckBoxPreference android:title="@string/mode_48k" android:key="mode 48k"></CheckBoxPreference>
        </PreferenceCategory>
        
    </PreferenceScreen>
